perf test cases + tuning
